<resources>
    <string name="app_name" translatable="false">超级小班课</string>
    <string name="alivc_superclass_string_title_rtc" translatable="false">欢迎来到超级小班课</string>
    <string name="alivc_superclass_string_second_title_rtc" translatable="false">阿里云音视频通信RTC提供基础通信服务</string>
    <string name="alivc_superclass_string_name" translatable="false">名字</string>
    <string name="alivc_superclass_string_name_hint" translatable="false">请输入姓名</string>
    <string name="alivc_superclass_string_class_code" translatable="false">教室码</string>
    <string name="alivc_superclass_string_class_code_hint" translatable="false">请输入教室码（5位数字）</string>
    <string name="alivc_superclass_string_group" translatable="false">小组</string>
    <string name="alivc_superclass_string_group_name" translatable="false">组_</string>
    <string name="alivc_superclass_string_group_hint" translatable="false">请选择小组</string>
    <string name="alivc_superclass_string_choose_group" translatable="false">选择小组</string>
    <string name="alivc_superclass_string_enter_classroom" translatable="false">进入教室</string>
    <string name="alivc_superclass_string_enter_loading" translatable="false">进入中</string>
    <string name="alivc_superclass_string_done" translatable="false">完成</string>
    <string name="alivc_superclass_string_leave" translatable="false">离开</string>
    <string name="alivc_superclass_string_leave_class" translatable="false">离开教室</string>
    <string name="alivc_superclass_string_leave_class_message" translatable="false">您确定离开教室吗？离开后，您可以用此教室码再次进入教室。</string>
    <string name="alivc_superclass_string_mute" translatable="false">静音</string>
    <string name="alivc_superclass_string_mute_cancel" translatable="false">取消静音</string>
    <string name="alivc_superclass_string_camera_open" translatable="false">开摄像头</string>
    <string name="alivc_superclass_string_camera_close" translatable="false">关摄像头</string>
    <string name="alivc_superclass_string_camera_closed" translatable="false">摄像头已关闭</string>
    <string name="alivc_superclass_string_connect_teacher" translatable="false">连麦老师</string>
    <string name="alivc_superclass_string_cancel_connect_teacher" translatable="false">断开老师</string>
    <string name="alivc_superclass_string_connect_group_members" translatable="false">小组成员</string>
    <string name="alivc_superclass_string_copy_success" translatable="false">已复制到剪切板</string>
    <string name="alivc_superclass_string_team_members" translatable="false">小组成员</string>
    <string name="alivc_superclass_string_dialog_cancel" translatable="false">取消</string>
    <string name="alivc_superclass_string_dialog_confirm" translatable="false">确定离开</string>
    <string name="alivc_superclass_string_title_dialog_tip" translatable="false">提示</string>
    <string name="alivc_superclass_string_error_rtc_normal" translatable="false">系统错误，请点击确定退出</string>
    <string name="alivc_superclass_string_confrim_btn" translatable="false">确认</string>
    <string name="alivc_superclass_string_error_code" translatable="false">错误码：</string>
    <string name="alivc_superclass_string_not_choose" translatable="false">未选择</string>
    <string name="alivc_superclass_string_group_end" translatable="false">&#160;组</string>
    <string name="alivc_superclass_string_is_speaking" translatable="false">&#160;&#160;正在发言</string>
    <string name="alivc_superclass_string_assistant" translatable="false">（助教）</string>



    <string name="alivc_superclass_string_hint_room_num" translatable="false">房间号</string>
    <string name="alivc_superclass_string_room_num_empty" translatable="false">请输入房间号</string>
    <string name="alivc_superclass_string_tips_room_num" translatable="false">1~64位，支持大小写字母、数字、下划线_\n注：相同房间号才可以进行实时连麦</string>
    <string name="alivc_superclass_string_btn_start_voice_call" translatable="false">开始通话</string>
    <string name="alivc_superclass_string_me" translatable="false">我</string>
    <string name="alivc_superclass_string_student" translatable="false">_学生</string>
    <string name="alivc_superclass_string_text_setting" translatable="false">设置</string>
    <string name="alirtc_permission" translatable="false">请先申请权限</string>
    <string name="alivc_superclass_string_text_silent" translatable="false">静音</string>
    <string name="alivc_superclass_string_text_ring_off" translatable="false">挂断</string>
    <string name="alivc_superclass_string_text_loud_speaker" translatable="false">免提</string>
    <string name="alivc_superclass_string_hint_double_click" translatable="false">请不要重复点击</string>
    <string name="alivc_superclass_string_text_bgm" translatable="false">背景音乐</string>
    <string name="alivc_superclass_string_text_bg" translatable="false">背景图片</string>
    <string name="alivc_superclass_string_room_num_has_two_user" translatable="false">频道已满，请更换房间号</string>
    <string name="alivc_superclass_string_hint_join_room_faild" translatable="false">加入房间失败，请重试</string>
    <string name="alivc_superclass_string_join_channel_error" translatable="false">加入房间失败，%1$s</string>
    <string name="alivc_superclass_string_data_parse_error" translatable="false">数据解析失败</string>
    <string name="alivc_superclass_string_text_sub_title" translatable="false">阿里云音视频通信RTC提供基础通信服务</string>
    <string name="alivc_superclass_string_text_channel_id_type_error" translatable="false">房间号格式错误</string>
    <string name="alivc_superclass_string_userinfo_empty" translatable="false">获取用户信息失败，请退出重试</string>
    <string name="alivc_superclass_string_loading_join_channel" translatable="false">加载中</string>
    <string name="alivc_superclass_string_network_conn_error" translatable="false">网络请求失败，请检查您的网络设置</string>
    <string name="alivc_superclass_string_user_unonline" translatable="false">虚位以待</string>
    <string name="alivc_superclass_string_title_channel_id" translatable="false">房间号：%1$s</string>
    <string name="alivc_superclass_string_hint_timeout" translatable="false">您的欢乐体验时长为10分钟</string>
    <string name="alivc_superclass_string_no_bgm" translatable="false">无音乐</string>
    <string name="alivc_superclass_string_leave_channel" translatable="false">退出语聊</string>
    <string name="alivc_superclass_string_hint_leave_channel" translatable="false">您的本次体验时长未满\n可继续体验</string>
    <string name="alivc_superclass_string_confirm_leave_channel" translatable="false">确认退出</string>
    <string name="alivc_superclass_string_continue_to_experience" translatable="false">继续体验</string>
    <string name="alivc_superclass_string_text_silent_enable" translatable="false">静音已开启</string>
    <string name="alivc_superclass_string_text_loud_speaker_enable" translatable="false">扬声器已开启</string>
    <string name="alivc_superclass_string_text_silent_unenable" translatable="false">静音已取消</string>
    <string name="alivc_superclass_string_text_loud_speaker_unenable" translatable="false">扬声器已取消</string>
    <string name="alivc_superclass_string_text_waitting" translatable="false">请静候对方进入</string>
    <string name="alivc_superclass_string_experience_time_out" translatable="false">体验时间已到</string>
    <string name="alivc_superclass_string_experience_time_out_please_try_angin" translatable="false">您的本次体验时长已满\n如需再次体验，请重新创建通话</string>
    <string name="alivc_superclass_string_know" translatable="false">我知道了</string>
    <string name="alivc_superclass_string_experience_time_format" translatable="false">%1$s:%2$s</string>
    <string name="alivc_superclass_string_channel_num_too_more" translatable="false">房间已满员</string>
    <string name="alivc_superclass_string_user2_leave_channel" translatable="false">对方已退出房间</string>
    <string name="alivc_superclass_string_user2_network_not_better" translatable="false">对方网络不佳</string>
    <string name="alivc_superclass_string_user1_network_not_better" translatable="false">当前网络不佳</string>
    <string name="alivc_superclass_string_bg_name_1" translatable="false">霜白</string>
    <string name="alivc_superclass_string_bg_name_2" translatable="false">酷黑</string>
    <string name="alivc_superclass_string_bg_name_3" translatable="false">繁星</string>

    <string name="alivc_superclass_string_message_wait_teacher" translatable="false">请等待老师进入教室</string>
    <string name="alivc_superclass_string_message_fast_click" translatable="false">请不要快速点击上下麦</string>
</resources>
